--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "email": "fireyy@gmail.com"
   },
   "scripts": {
+    "bump": "standard-version",
     "build": "rollup -c",
     "dev": "rollup -c -w -m inline",
     "lint": "eslint src",
+    "minify": "uglifyjs $npm_package_main -cm -o $npm_package_main -p relative --in-source-map ${npm_package_main}.map --source-map ${npm_package_main}.map",
     "prebuild": "rm -rf dist",
-    "prepublish": "npm run test",
-    "pretest": "npm run build",
     "server": "python -m SimpleHTTPServer 3000",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "release": "npm run build && npm run minify && npm run bump && git push --follow-tags origin master && npm publish"
   },
   "keywords": [
     "video",
@@ -39,6 +40,8 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-postcss": "^0.5.5",
-    "rollup-watch": "^3.2.2"
+    "rollup-watch": "^3.2.2",
+    "standard-version": "^4.2.0",
+    "uglify-js": "^3.1.5"
   }
 }
