--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-inline-svg": "^3.0.0",
     "rollup": "^0.41.1",
-    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-buble": "^0.16.0",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-postcss": "^0.5.5",
     "rollup-watch": "^3.2.2",
