--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "postcss-cssnext": "^3.0.2",
-    "postcss-inline-svg": "^3.0.0",
     "rollup": "^0.41.1",
     "rollup-plugin-buble": "^0.16.0",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-postcss": "^0.5.5",
     "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-string": "^2.0.2",
     "rollup-watch": "^3.2.2",
     "standard-version": "^4.2.0",
     "uglify-js": "^3.1.5"
